# Personal.TOTP

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm.json
docs/: architecture.md  commands.md  crypto.md  database.md  i18n.md  logger.md  theming.md  versioning.md
src/: App.tsx  index.css  logger.ts  main.tsx  theme.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AddEntryModal.tsx  ConfirmModal.tsx  EditEntryModal.tsx  ResetVaultModal.tsx  SettingsModal.tsx  SetupScreen.tsx  ToastContainer.tsx  TotpEntry.tsx  TotpList.tsx  UnlockScreen.tsx  icons.tsx
src/hooks/: useToast.ts
src/i18n/: en-US.json  index.ts  pt-BR.json
